--- a/accounts/templates/registration/signup.html
+++ b/accounts/templates/registration/signup.html
@@ -1,13 +1,17 @@
 
 {% extends 'main/base_layout.html' %}
+{% load widget_tweaks %}
 {% block content %}
     <div class="container">
-        <div class="row">
-        <div class="m-auto py-5">
+        <div class="row m-auto ">
+        <div class="m-auto col-6 py-5">
             <form method="post" action="{% url 'signup' %}" >
                          {% csrf_token %}
-                        {{form.as_p}}
-            <button class="btn btn-info m-auto " type="submit">Register </button>
+                {% for field in form %}
+                {{ field.label_tag }}
+                    {% render_field field class="form-control mb-3" %}
+                {% endfor %}
+            <button class="btn btn-info mt-4" type="submit">Register </button>
             </form>
 
         </div>
